--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,17 @@
 .animate-scroll:hover {
   animation-play-state: paused;
 }
+/* style.css */
+@keyframes scroll {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 25s linear infinite;
+  white-space: nowrap;
+}
